<resources>
    <string name="app_name">Reqap</string>
    <string name="selamat_datang">Halo, selamat datang</string>
    <string name="persiapan_akun">Kami akan mempersiapkan akun anda</string>
    <string name="mulai">Mulai</string>
    <string name="nama_anda" translatable="false">Nama Lengkap</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="personalisasi_akun">Personalisasi Akun Anda</string>
    <string name="no_telp">Nomor Telpon</string>
    <string name="Masuk">Masuk</string>
    <string name="transaksi_keuangan">Transaksi</string>
    <string name="statistik">Statistik</string>
    <string name="notif">Notifikasi</string>
    <string name="akun">Akun</string>
    <string name="cek_inputan">Pastikan semua sudah terisi</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="pilih_kategori">Pilih Kategori</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="keterangan">Keterangan</string>
    <string name="total">Jumlah/Total</string>


    <string name="tambah">Tambah</string>
    <string name="nama_transaksi">Nama Transaksi</string>
    <string name="tanggal_transaksi">Tanggal Transaksi</string>
    <string name="tanggal">Tanggal</string>
    <string name="kategori">Kategori</string>
    <string name="kategori_transaksi">Kategori Transaksi</string>
    <string name="metode_transaksi">Metode Transaksi</string>
    <string name="metode">metode</string>
    <string name="total_transaksi">Total</string>
    <string name="upload_bukti">Upload Bukti(Optional)</string>
    <string name="nol_rupiah">Rp.0,-</string>
    <string name="tambah_pengeluaran">Tambah Pengeluaran</string>
    <string name="tambah_pemasukan">Tambah Pemasukan</string>
    <string name="bulan_ini">Bulan ini</string>
    <string name="tunai">Tunai</string>
    <string name="transfer">Transfer</string>
    
    <string-array name="payment_method">
        <item>Tunai</item>
        <item>Transfer</item>
        <item>Kartu Kredit</item>
        <item>Gopay</item>
        <item>Ovo</item>
        <item>Lainnya</item>
    </string-array>
</resources>
