<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_height="match_parent" android:padding="8dp">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:gravity="center"
              android:fontFamily="@font/roboto_light"
              android:text="@string/pilih_kategori"
              android:textColor="@android:color/black"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/pengeluaran" android:layout_marginTop="16dp"
              android:fontFamily="@font/roboto_light" android:textColor="@android:color/black" android:textSize="14sp"
              android:layout_marginStart="16dp"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/recyclerExpenseCategory"
            android:layout_marginTop="4dp"/>
    <TextView
            android:text="@string/pemasukan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView5" android:fontFamily="@font/roboto_light"
            android:textColor="@android:color/black" android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/recyclerIncomeCategory"
            android:layout_marginTop="4dp"/>
</LinearLayout>