<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android" >
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            tools:context="id.milzamhb.finance.reqap.view.fragment.FragmentPersonalize"
            android:padding="16dp"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/personalisasi_akun"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:id="@+id/textView3"
                android:fontFamily="@font/roboto_light" android:textColor="@android:color/black"
                android:textSize="@dimen/size_24_sp"
                android:gravity="center"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/etFullName"
                app:layout_constraintVertical_chainStyle="packed" android:inputType="phone"/>
        <EditText android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:id="@+id/etFullName"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="24dp"
                  android:background="@drawable/square_edittext" android:padding="16dp"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                  android:hint="@string/nama_anda"
                  android:inputType="textPersonName"
                  android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
                  app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/etEmailAddress"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/square_edittext"
                android:padding="16dp"
                android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/etEmailAddress" android:hint="@string/alamat_email"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/etFullName"
                android:inputType="textEmailAddress" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/etPhoneNumber"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etPhoneNumber" android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/etEmailAddress" android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/square_edittext"
                android:padding="16dp" android:hint="@string/no_telp"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/btnEnter"/>
        <Button
                android:text="@string/Masuk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnEnter"
                android:background="@drawable/rounded_button_indigo" android:textColor="@color/colorPrimary"
                android:fontFamily="@font/roboto_light" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"/>
    </android.support.constraint.ConstraintLayout>
</layout>
