<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="id.milzamhb.finance.reqap.view.fragment.FragmentAdd"
    >

        <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:theme="?attr/actionBarTheme"
                android:minHeight="?attr/actionBarSize"
                android:id="@+id/toolbar"
                android:elevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="horizontal">
                <ImageButton android:layout_width="14dp"
                             android:layout_height="14dp"
                             android:padding="6dp"
                             android:layout_marginEnd="16dp"
                             android:background="@android:color/transparent"
                             android:src="@drawable/ic_close_dark"
                             android:layout_gravity="center"
                />
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:id="@+id/titleAdd"
                          tools:text="Tambah Pengeluaran"
                          android:textSize="@dimen/size_18_sp"
                          android:fontFamily="@font/roboto_light"
                          android:textColor="@android:color/black"/>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"

                      android:layout_marginTop="2dp"
                      app:layout_constraintTop_toBottomOf="@+id/toolbar" app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:background="@color/colorPrimary"
                      android:orientation="vertical" android:paddingStart="16dp" android:paddingEnd="16dp"
                      android:paddingTop="16dp" android:paddingBottom="8dp"
                      android:id="@+id/linearLayout7">
            <TextView
                    android:text="@string/nama_transaksi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView9"
                    android:textColor="@android:color/black" android:fontFamily="@font/roboto"
                    android:labelFor="@+id/etAddName"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etAddName" android:layout_marginTop="2dp"
                    android:hint="@string/transaksi_keuangan"/>
            <TextView
                    android:text="@string/tanggal_transaksi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView10" android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto" android:textColor="@android:color/black"
                    android:labelFor="@+id/etAddDate"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etAddDate" android:hint="@string/tanggal"
                    android:layout_marginTop="2dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:background="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout7" app:layout_constraintStart_toStartOf="parent"
                android:paddingStart="16dp" android:paddingEnd="8dp"
                android:paddingBottom="8dp" android:id="@+id/linearLayout8" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout9">
            <TextView
                    android:text="@string/kategori"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView12" android:layout_weight="1"
                    android:textColor="@android:color/black" android:fontFamily="@font/roboto"
                    android:labelFor="@+id/etAddKategori"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etAddKategori" android:layout_weight="1" android:layout_marginTop="2dp"
                    android:hint="@string/kategori_transaksi"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:paddingStart="8dp" android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout7" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/linearLayout8"
                android:id="@+id/linearLayout9"
                app:layout_constraintHorizontal_bias="0.5" android:background="@color/colorPrimary"
        >
            <TextView
                    android:text="@string/metode_transaksi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView13"
                    android:textColor="@android:color/black" android:fontFamily="@font/roboto"
                    android:labelFor="@+id/etPaymentMethod"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etPaymentMethod" android:hint="@string/metode" android:layout_marginTop="2dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:background="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout9" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="16dp" android:paddingEnd="16dp" android:paddingBottom="16dp"
                android:id="@+id/linearLayou10">
            <TextView
                    android:text="@string/total_transaksi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView14"
                    android:textColor="@android:color/black" android:fontFamily="@font/roboto"
                    android:labelFor="@+id/etAddAmount"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etAddAmount" android:layout_marginTop="2dp"
                    android:hint="@string/transaksi_keuangan"/>
        </LinearLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayou10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout11"
                android:layout_height="0dp"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp" android:background="@color/colorPrimary">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/imgUploadTrans" android:scaleType="fitCenter"
                    android:background="@color/colorPrimary"
                    android:layout_centerVertical="true"
                    android:visibility="gone"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_add_photo"
                    android:id="@+id/btnAddImageTrans"
                    android:background="@android:color/transparent"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
            />
            <TextView
                    android:text="@string/upload_bukti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvUploadBuktiTrans"
                    android:fontFamily="@font/roboto"
                    android:textColor="@android:color/black"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:layout_below="@+id/btnAddImageTrans"/>
        </RelativeLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:elevation="4dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="16dp" android:id="@+id/linearLayout11" android:background="@color/colorPrimary">
            <Button
                    android:text="@string/tambah"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnSaveTrans" android:layout_weight="1"
                    android:background="@drawable/rounded_button_indigo" android:fontFamily="@font/roboto"
                    android:textColor="@color/colorPrimary"/>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</layout>