<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:padding="16dp"
            tools:context="id.milzamhb.finance.reqap.view.fragment.FragmentPreference"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/selamat_datang"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:id="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="44dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="@dimen/size_24_sp"
                android:fontFamily="@font/roboto_light"
                android:textColor="@android:color/black"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintVertical_chainStyle="packed"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/persiapan_akun"
                  app:layout_constraintTop_toBottomOf="@+id/textView"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="8dp"
                  android:layout_marginTop="8dp"
                  android:fontFamily="@font/roboto_light"
                  android:textColor="@android:color/black"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:gravity="center"
                  android:textSize="@dimen/size_18_sp"
                  android:layout_marginEnd="8dp"
                  android:id="@+id/textView2" app:layout_constraintHorizontal_bias="0.507"
                  app:layout_constraintBottom_toTopOf="@+id/btn_start_pref"/>
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:textColor="@android:color/white"
                android:text="@string/mulai"
                android:id="@+id/btn_start_pref"
                app:layout_constraintHorizontal_bias="0.5"
                android:background="@drawable/rounded_button_indigo"
        />
    </android.support.constraint.ConstraintLayout>
</layout>
